[project]
name = "stock-crawl"
version = "0.1.8"
authors = [
  { name="Seria Ati", email="seria.ati@gmail.com" },
]
description = "Python package for crawling stock data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "stock-crawl"
version = "0.1.8"
description = "Python package for crawling stock data"
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
fake-useragent = "^1.4.0"
cachetools = "^5.3.2"
asyncache = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
