[project]
name = "stock-crawl"
version = "1.0.0"
authors = [
  { name="Seria Ati", email="seria.ati@gmail.com" },
]
description = "Python package for crawling stock data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL-3.0 License",
    "Operating System :: OS Independent",
]

[tool.poetry]
name = "stock-crawl"
version = "0.1.8"
description = "Python package for crawling stock data"
authors = ["seriaati <seria.ati@gmail.com>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = "^3.9.0"
pydantic = "^2.5.2"
beautifulsoup4 = "^4.12.2"
lxml = "^5.1.0"
fake-useragent = "^1.4.0"
cachetools = "^5.3.2"
asyncache = "^0.3.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.2"
pytest = "^8.0.1"
ruff = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["E","F","UP","B","SIM","I"]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F403"]