[project]
name = "stock-crawl"
version = "1.0.1"
description = "Python package for crawling stock data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.12",
    "asyncache>=0.3.1",
    "beautifulsoup4>=4.13.3",
    "cachetools>=5.5.2",
    "fake-useragent>=2.0.3",
    "lxml>=5.3.1",
    "pydantic>=2.10.6",
]
license = { file = "LICENSE" }
authors = [{ name = "seriaati", email = "seria.ati@gmail.com" }]

[dependency-groups]
dev = ["pytest>=8.3.4", "pytest-asyncio>=0.25.3"]
